--- a/package.json
+++ b/package.json
@@ -9,9 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/forms": "^0.5.2",
+    "autoprefixer": "^10.4.7",
+    "axios": "^0.27.2",
+    "date-fns": "^2.28.0",
+    "mongoose": "^6.4.4",
     "next": "12.2.2",
+    "postcss": "^8.4.14",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.4.0",
+    "tailwindcss": "^3.1.6"
   },
   "devDependencies": {
     "eslint": "8.19.0",
