--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "autoprefixer": "^10.4.7",
     "axios": "^0.27.2",
     "date-fns": "^2.28.0",
+    "dotenv": "^16.0.1",
     "mongoose": "^6.4.4",
     "next": "12.2.2",
     "postcss": "^8.4.14",
